fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ margin: 0;
     width: 10%;
     height: 90%;
     float: right;
+    position: absolute;
+    top: 25%;
+    left: 90%; */
+    /* transform: translate(-50%,-50%); */
+
   }
   .container {
     display: inline-block;
